Fix: Ensure script.js is loaded as a module in both home.html and index.html

--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@
   <!-- นำเข้า Google Identity Services Library สำหรับ Logout -->
   <script src="https://accounts.google.com/gsi/client" async defer></script>
   <!-- ย้าย script.js มาที่นี่เพื่อให้ฟังก์ชันพร้อมใช้งานก่อน onload -->
-  <script src="script.js"></script>
+<script src="script.js" type="module"></script>
 </head>
 <body onload="checkLogin()">
   <div class="app-container">
