--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
     </div>
   </div>
 
-  <script src="script.js"></script> <!-- นำเข้า JavaScript หลัก -->
+  <!-- ย้าย script.js มาที่นี่เพื่อให้ฟังก์ชันพร้อมใช้งานก่อน onload -->
+<script src="script.js" type="module"></script> <!-- นำเข้า JavaScript หลัก -->
 </body>
 </html>
