Final fix: Ensure checkLogin and GSI callback are properly initialized for module scripts

--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
   <!-- ย้าย script.js มาที่นี่เพื่อให้ฟังก์ชันพร้อมใช้งานก่อน onload -->
 <script src="script.js" type="module"></script>
 </head>
-<body onload="checkLogin()">
+<body>
   <div class="app-container">
     <!-- ส่วนหัวของแอป (Top Bar) -->
     <header class="app-header">
