--- a/index.html
+++ b/index.html
@@ -50,12 +50,8 @@
     <h2>เข้าสู่ระบบ</h2>
     <p>โปรดเข้าสู่ระบบด้วยบัญชี Google ของคุณ</p>
     <!-- div สำหรับ Google Sign-In จะถูกสร้างและ Render ด้วย JavaScript -->
-    <div id="googleSignInButton"></div>
+    <div id="googleSignInButton"></div> <!-- นี่คือ div ใหม่สำหรับปุ่มที่สร้างด้วย JS -->
   </div>
-
-  <!-- ย้าย script.js มาที่นี่เพื่อให้ฟังก์ชันพร้อมใช้งานก่อน onload -->
-<script src="script.js" type="module"></script> <!-- นำเข้า JavaScript หลัก -->
-</body>
 
   <!-- ย้าย script.js มาที่นี่เพื่อให้ฟังก์ชันพร้อมใช้งานก่อน onload -->
 <script src="script.js" type="module"></script> <!-- นำเข้า JavaScript หลัก -->
