--- a/home.html
+++ b/home.html
@@ -260,10 +260,12 @@
   </div>
 
   <!-- Modal สำหรับเพิ่ม/แก้ไขรายการ -->
-  <div id="transactionModal" class="modal">
-    <div class="modal-content">
-      <span class="close-button" onclick="closeTransactionModal()">&times;</span>
-      <h2 id="modalTitle">เพิ่มรายการใหม่</h2>
+<div id="transactionModal" class="modal">
+  <div class="modal-content">
+    <span class="close-button" onclick="closeTransactionModal()">&times;</span>
+    <h2 id="modal-title">เพิ่มรายการ</h2>
+    </div>
+</div>
       <form id="transactionForm">
         <input type="hidden" id="transactionId" name="id"> <!-- สำหรับเก็บ ID รายการเมื่อแก้ไข -->
 
