ข้อความอธิบายการเปลี่ยนแปลง

--- a/about.html
+++ b/about.html
@@ -317,3 +317,10 @@
     </script>
 </body>
 </html>
+
+<body onload="checkSession();">
+  <h2 id="greeting"></h2>
+  <button onclick="logoutUser()">ออกจากระบบ</button>
+  <script src="p.js"></script>
+</body>
+
