--- a/login.html
+++ b/login.html
@@ -4,3 +4,20 @@
   <button type="submit">เข้าสู่ระบบ</button>
 </form>
 <script src="p.js"></script>
+
+<!DOCTYPE html>
+<html lang="th">
+<head>
+  <meta charset="UTF-8">
+  <title>เข้าสู่ระบบ</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <h1>เข้าสู่ระบบ</h1>
+  <form action="dashboard.html" method="post">
+    <input type="text" placeholder="ชื่อผู้ใช้" required>
+    <input type="password" placeholder="รหัสผ่าน" required>
+    <button type="submit">เข้าสู่ระบบ</button>
+  </form>
+</body>
+</html>
