--- a/invest.html
+++ b/invest.html
@@ -31,10 +31,9 @@
         <div id="content-container" class="flex-1 flex flex-col">
             <h1 class="text-3xl font-bold text-gray-800 mb-6 text-center">ข่าวสารการลงทุนล่าสุด</h1>
             
-            <!-- News Grid Container -->
+            <!-- News Grid Container - This ID is crucial -->
             <div id="news-grid" class="flex-1 grid grid-cols-1 md:grid-cols-2 gap-6 overflow-y-auto pr-2">
-                <!-- JavaScript will populate news cards here -->
-                <p class="text-center text-gray-500 md:col-span-2">กำลังโหลดข่าวสารล่าสุด...</p>
+                <p class="text-center text-gray-500 md:col-span-2">กำลังโหลดข่าวสาร...</p>
             </div>
         </div>
     </div>
