--- a/about.html
+++ b/about.html
@@ -51,7 +51,8 @@
             </div>
         </div>
     </div>
-    <script type="module" src="app.js"></script>
+    <!-- *** แก้ไขบรรทัดนี้ *** -->
+    <script type="module" src="/app.js"></script>
 </body>
 </html>
 
