--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </div>
         </div>
     </div>
-    <script type="module" src="app.js"></script>
+    <!-- *** แก้ไขบรรทัดนี้ *** -->
+    <script type="module" src="/app.js"></script>
 </body>
 </html>
-
