--- a/invest.html
+++ b/invest.html
@@ -28,11 +28,12 @@
             <h1 class="text-3xl font-bold text-gray-800 mb-6 text-center">ข่าวสารการลงทุนล่าสุด</h1>
             
             <div id="news-grid" class="flex-1 grid grid-cols-1 md:grid-cols-2 gap-6 overflow-y-auto pr-2">
-                <p class="text-center text-gray-500 md:col-span-2">กำลังโหลดข่าวสาร...</p>
+                <p class="text-center text-gray-500 md:col-span-2">กำลังโหลดข่าวสารล่าสุด...</p>
             </div>
         </div>
     </div>
-    <script type="module" src="app.js"></script>
+    <!-- *** แก้ไขบรรทัดนี้ *** -->
+    <script type="module" src="/app.js"></script>
 </body>
 </html>
 
