--- a/login.html
+++ b/login.html
@@ -64,7 +64,8 @@
             </div>
         </div>
     </div>
-    <script type="module" src="app.js"></script>
+    <!-- *** แก้ไขบรรทัดนี้ *** -->
+    <script type="module" src="/app.js"></script>
 </body>
 </html>
 
